add layer detail change model field

--- a/iislayers/templates/includes/nav.html
+++ b/iislayers/templates/includes/nav.html
@@ -8,14 +8,14 @@
     <li class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="/"> Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'iislayers:index' %}"> Home <span class="sr-only">(current)</span></a>
             </li>
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="{% url 'iislayers:list' %}" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layers</a>
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layers</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="#"> Add layer</a>
-                    <a class="dropdown-item" href="#"> Layers list</a>
+                    <a class="dropdown-item" href="{% url 'iislayers:list' %}"> Layers list</a>
                 </div>
             </li>
         </ul>
