--- a/iislayers/templates/layer_details.html
+++ b/iislayers/templates/layer_details.html
@@ -58,7 +58,7 @@
         </tr>
 
             <th class="text-right">
-                <i class="fa fa-github" aria-hidden="true">  URL</i></th>
+                <i class="fa fa-github fa-2x" aria-hidden="true"></i></th>
             <td><a href="{{ layer.repositoryUrl }}">{{ layer.repositoryUrl }}</a></td>
         </tr>
 
