--- a/iislayers/templates/includes/nav.html
+++ b/iislayers/templates/includes/nav.html
@@ -14,7 +14,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Layers</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#"> Add layer</a>
+                    <a class="dropdown-item" href="{% url 'iislayers:new_layer' %}"> Add layer</a>
                     <a class="dropdown-item" href="{% url 'iislayers:list' %}"> Layers list</a>
                 </div>
             </li>
