--- a/iislayers/templates/layers_list.html
+++ b/iislayers/templates/layers_list.html
@@ -3,12 +3,12 @@
 {% block content %}
 <div class="col-md-12">
         <h2><i class ="fa fa-database"></i> Layers list</h2>
-    		<div class="col-md-5">
+    		<div class="col-md-8">
                         <form action="" method="GET" id="search-form" class="form-horizontal">
                             <div class="form-group row">
                                 <div class="input-group">
                                     <select type="select" name="q" class="form-control" id="id_select">
-                                        <option value="">Escolha...</option>
+                                        <option value="">Filter by...</option>
                                         <option value="layer_name">Layer Name</option>
                                         <option value="layer_resolution">Layer resolution</option>
                                         <option value="doi">DOI</option>
@@ -17,17 +17,20 @@
                                     <input type="text" name="v"
                                            class="form-control" id="id_search_box"
                                            value="{{ v|default_if_none:'' }}"
-                                           placeholder="buscar"/>
+                                           placeholder="insert value"/>
                                     <span class="input-group-btn">
                                     <button type="submit" class="sh1 btn btn-primary">
                                         <i class="fa fa-search"></i>
                                     </button>
                                     </span>
                                     {% if v %}
+                                        <span class="input-group-btn">
                                         <a href="{% url 'iislayers:list' %}"
-                                           class="btn btn-instagram">
+                                           class="btn btn-warning">
                                             <i class="fa fa-ban" aria-hidden="true"></i>
                                             <span></span></a>
+                                            <span class="alert alert-success">
+                                            <i class="fa fa-warning"></i> Database with {{ total_itens }} layers...</span>
                                     {% endif %}
                                 </div>
                             </div>
@@ -40,10 +43,10 @@
                     <th>Layer Name</th>
                     <th>Layer Type</th>
                     <th>Layer Resolution</th>
-                    <th>Publication Year</th>
+                    <th>Reference Year</th>
                     <th>Source</th>
-                    <th>Created on</th>
                     <th>Modified on</th>
+                    <th>Modified by</th>
                 </tr>
                 </thead>
                 {% for object in page_obj %}
@@ -53,35 +56,15 @@
                     </td>
                     <td>{{ object.layer_type }}</td>
                     <td>{{ object.layer_resolution }}</td>
-                    <td>{{ object.published_year }}</td>
+                    <td>{{ object.layer_year_reference }}</td>
                     <td>{{ object.source }}</td>
-                    <td>{{ object.created_date }}</td>
                     <td>{{ object.modified_date }}</td>
+                    <td>{{ object.modified_by }}</td>
                 </tr>
                 {% endfor %}
             </table>
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            {% if page_obj.has_previous %}
-                <li class="page-item disabled">
-                    <li class="page-item"><a class="page-link" href="?page=1"> Início</a></li>
-                    <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"> {{ page_obj.previous_page_number }} </a></li>
-            {% endif %}
-            <span class="current">
-                <li class="page-item active">
-                  <a class="page-link" href="#"> {{ page_obj.number }} <span class="sr-only">(current)</span></a>
-                </li>
-            </span>
-            {% if page_obj.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}"> {{ page_obj.next_page_number }} </a></li>
-                <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}"> Ultimo </a></li>
-            {% endif %}
-        </ul>
-    </nav>
-        {% else %}
-            <p class="alert alert-warning">
-            <i class="fa fa-warning"></i> Database without layer registered!</p>
+        {% include 'pagination.html' %}
         {% endif %}
 </div>
 
