--- a/iislayers/templates/layers_list.html
+++ b/iislayers/templates/layers_list.html
@@ -12,7 +12,7 @@
                                         <option value="layer_name">Layer Name</option>
                                         <option value="layer_resolution">Layer resolution</option>
                                         <option value="doi">DOI</option>
-                                        <option value="paper_subject">Subject</option>
+                                        <option value="layer_subject">Subject</option>
                                     </select>
                                     <input type="text" name="v"
                                            class="form-control" id="id_search_box"
