small update to layer list

--- a/iislayers/templates/layers_list.html
+++ b/iislayers/templates/layers_list.html
@@ -44,7 +44,7 @@
                     <th>Layer Type</th>
                     <th>Layer Resolution</th>
                     <th>Reference Year</th>
-                    <th>Source</th>
+                    <th>Layer subject</th>
                     <th>Modified on</th>
                     <th>Modified by</th>
                 </tr>
@@ -57,7 +57,7 @@
                     <td>{{ object.layer_type }}</td>
                     <td>{{ object.layer_resolution }}</td>
                     <td>{{ object.layer_year_reference }}</td>
-                    <td>{{ object.source }}</td>
+                    <td>{{ object.layer_subject }}</td>
                     <td>{{ object.modified_date }}</td>
                     <td>{{ object.modified_by }}</td>
                 </tr>
