--- a/iislayers/templates/layer_details.html
+++ b/iislayers/templates/layer_details.html
@@ -13,6 +13,9 @@
     --->
 {{ layer.layer_name }}
 <a class="btn btn-warning" href="{% url 'iislayers:edit_layer' pk=layer.pk %}"><span class="fa fa-edit"></span> Edit layer detail</a>
+{% if user.is_superuser %}
+    <a class="btn btn-danger" href="{% url 'iislayers:remove_confirmation' pk=layer.pk %}"><span class="fa fa-minus-circle"></span>  Remove layer</a>
+{% endif %}
 </h1>
 
 
